[gd_scene load_steps=7 format=3 uid="uid://ddrdrwh1uvpgh"]

[ext_resource type="Script" path="res://game/enemies/cloud/cloud.gd" id="1_qljl2"]
[ext_resource type="Texture2D" uid="uid://t4rm0ignf31m" path="res://assets/graphics/FlyingLevel/Cloud.png" id="2_vxlph"]
[ext_resource type="Script" path="res://components/test_components/move_component_2.gd" id="3_mdkxn"]
[ext_resource type="Script" path="res://components/test_components/move/move_steady_component.gd" id="4_guc6w"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="4_qu68p"]
[ext_resource type="PackedScene" uid="uid://dkwxrtywclflf" path="res://game/enemies/cloud/cloud_lightning.tscn" id="5_gnb3p"]

[node name="Cloud" type="Node2D"]
script = ExtResource("1_qljl2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_vxlph")

[node name="MoveComponent2" type="Node" parent="."]
script = ExtResource("3_mdkxn")

[node name="MoveSteadyComponent" type="Node" parent="MoveComponent2"]
script = ExtResource("4_guc6w")

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("4_qu68p")
what_to_spawn = ExtResource("5_gnb3p")

[node name="FireRateTimer" type="Timer" parent="."]
one_shot = true

[node name="ZapMarker" type="Marker2D" parent="."]
position = Vector2(0, 3)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(1.10269e-06, -4.76837e-07)
rect = Rect2(-24, -6, 48, 12)
